Vertex & Weight Painting not working in core profile #51380

Closed
opened 2017-05-01 12:07:05 +02:00 by Dalai Felinto · 8 comments

Sample file - texture painting: texture-paint.blend
This is in clay, so you won't see the texture. That said, you should see the texture updating in the Image editor, which you don't.

I think this is related to the old depth test failing.

Sample file - texture painting: [texture-paint.blend](https://archive.blender.org/developer/F583880/texture-paint.blend) This is in clay, so you won't see the texture. That said, you should see the texture updating in the Image editor, which you don't. I think this is related to the old depth test failing.
Luca Rood was assigned by Dalai Felinto 2017-05-01 12:07:05 +02:00
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscribers: @dfelinto, @LucaRood-3, @ideasman42

Added subscribers: @dfelinto, @LucaRood-3, @ideasman42
Luca Rood removed their assignment 2017-05-01 12:13:09 +02:00
Campbell Barton self-assigned this 2017-05-03 21:06:28 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed project paint not working 606d1f2b6e - since the task is spesific - closing.

Fixed project paint not working 606d1f2b6e - since the task is spesific - closing.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Re-opening, issue I found was a red-herring since texture paint uses different logic then vertex/weight paint.

Not sure we should have one task for all paint modes, editing this task.

Re-opening, issue I found was a red-herring since texture paint uses different logic then vertex/weight paint. Not sure we should have one task for all paint modes, editing this task.
Campbell Barton changed title from Painting not working in core profile to Vertex & Weight Painting not working in core profile 2017-05-04 12:26:50 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 4bd2429f35

This issue was referenced by 4bd2429f3519a58ccd1f93200dae42e52c45956e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51380
No description provided.