Use mesh draw cache for back-buffer selection

Vertex/weight paint now work with core profile, resolves T51380.